@@ -1,4 +1,4 @@
-$Id: README,v 1.2 2002/01/15 20:59:59 rmk Exp $
+$Id: README,v 1.3 2002/06/19 18:55:08 dlowder Exp $
 
 General
 =======
@@ -87,4 +87,5 @@ Description:
 
 Parameters:
   xyswap
-	interchange the X and Y co-ordinates
+	interchange the X and Y co-ordinates -- no longer used or needed
+	if the new linear calibration utility ts_calibrate is used.
