@@ -1,4 +1,3 @@
-# $Id: ts.conf,v 1.1.1.1 2001/12/22 21:12:06 rmk Exp $
 module variance xlimit=50 ylimit=50 pthreshold=100
-module dejitter xdelta=3 ydelta=2 pthreshold=100
+module dejitter xdelta=10 ydelta=10 pthreshold=100
 module linear
